--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,15 +29,28 @@
     "build": "tsup && mkdir -p dist/worker && cp src/worker/thread-core.js dist/worker/thread-core.js",
     "clean": "rm -rf dist"
   },
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./mongoose": {
+      "import": "./dist/mongoDB.js",
+      "types": "./dist/mongoDB.d.ts"
+    }
+  },
   "dependencies": {
     "acorn": "^8.14.1",
     "acorn-walk": "^8.3.4",
     "chalk": "^5.4.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "cron": "^4.3.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "ms": "^2.1.3",
+    "multer": "^1.4.5-lts.2",
+    "node-cron": "^3.0.3",
     "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
@@ -45,7 +58,15 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/multer": "^1.4.12",
+    "@types/node-cron": "^3.0.11",
     "tsup": "^8.4.0",
     "typescript": "^5.8.3"
+  },
+  "peerDependencies": {
+    "mongoose": ">=8.0.0 <10.0.0"
+  },
+  "optionalDependencies": {
+    "mongoose": "^8.15.0"
   }
 }
